--- a/style/style.css
+++ b/style/style.css
@@ -1,3 +1,92 @@
-body{
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600&display=swap');
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+body {
     text-align: center;
+    font-family: 'Inter', sans-serif;
+    background-color: #DDC3A8;
+
+}
+
+header {
+    margin-bottom: 2rem;
+}
+
+.conteiner {
+    background-color: white;
+    color: #37352F;
+    margin: 4rem auto;
+    padding: 2rem;
+    width: 60vw;
+    border-radius: 8px;
+    box-shadow:
+        7.5px 7.2px 5.3px rgba(0, 0, 0, 0.018),
+        14.5px 13.9px 12.3px rgba(0, 0, 0, 0.026),
+        21.4px 20.6px 22.2px rgba(0, 0, 0, 0.032),
+        29.4px 28.3px 36.8px rgba(0, 0, 0, 0.038),
+        42px 40.4px 60.6px rgba(0, 0, 0, 0.044),
+        74.3px 71.5px 105.9px rgba(0, 0, 0, 0.052),
+        213px 205px 229px rgba(0, 0, 0, 0.07);
+}
+
+.input {
+    margin-bottom: 2rem;
+
+}
+
+.input [type="text"] {
+    padding: .4rem;
+    border: none;
+    outline: 0;
+    border-bottom: 1px solid rgb(190, 190, 190);
+}
+
+.input [type="text"]:focus {
+    border-bottom: 1px solid cornflowerblue;
+}
+
+.input [type="button"] {
+    cursor: pointer;
+    padding: .5rem;
+    background-color: #2dccb8;
+    color: white;
+    border: 1px solid #2dccb8;
+    border-radius: 7px;
+    transition: 0.3s;
+}
+
+.input [type="button"]:hover {
+    background-color: white;
+    color: #2dccb8;
+
+}
+
+.card {
+    font-size: 2rem;
+}
+
+.card label {
+    font-weight: 200;
+    margin-bottom: 1rem;
+}
+
+.card p {
+    font-weight: 200;
+    margin-bottom: 1rem;
+}
+
+.card [type="checkbox"] {
+    display: flex;
+}
+
+footer a {
+    text-decoration: none;
+    color: white;
+
+
 }
